--- a/server/public/index.html
+++ b/server/public/index.html
@@ -13,6 +13,9 @@
 </head>
 
 <body>
+    <!-- <img src="HTTP://LOCALHOST:3000/imagen/usuarios/5c06105166f53e1b7f93ee2a-698.jpeg?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c3VhcmlvIjp7InJvbGUiOiJBRE1JTl9ST0xFIiwiZXN0YWRvIjp0cnVlLCJnb29nbGUiOmZhbHNlLCJfaWQiOiI1YzA2MTA1MTY2ZjUzZTFiN2Y5M2VlMmEiLCJub21icmUiOiJOaW1pIiwiZW1haWwiOiJuaW1pQGdtYWlsLmNvbSIsIl9fdiI6MCwiaW1nIjoiNWMwNjEwNTE2NmY1M2UxYjdmOTNlZTJhLTY5OC5qcGVnIn0sImlhdCI6MTU0OTQzMDU0MCwiZXhwIjoxNTQ5NjAzMzQwfQ.H5tbpAuDSgROn63hWELAlVH70m5J4gXA4TOMszTJHtw"alt=""> -->
+
+
     <div class="g-signin2" data-onsuccess="onSignIn"></div>
     <a href="#" onclick="signOut();">Sign out</a>
     <script>
